<resources>
    <string name="app_name">Matule_App_sessions</string>
    <string name="hello">Привет!</string>
    <string name="login_description">Заполните Свои данные или продолжите через социальные медиа</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Войти</string>
    <string name="first_time">Вы впервые?</string>
    <string name="createUser">Создать пользователя</string>
    <string name="title">title</string>
    <string name="back">Отмена</string>
    <string name="ok">Ok</string>
    <string name="start">Начать</string>
    <string name="next">Далее</string>
    <string name="welcome">Добро \nпожаловать</string>
    <string name="start_trip">Начнем путешествие</string>
    <string name="onboarding_2_description">Умная, великолепная и модная коллекция Изучите сейчас</string>
    <string name="onboarding_3_main">У вас есть сила, чтобы</string>
    <string name="onboarding_3_description">В вашей комнате много красивых и привлекательных растений</string>
    <string name="main">Главная</string>
    <string name="search">Поиск</string>
    <string name="category">Категории</string>
    <string name="popular">Популярное</string>
    <string name="all">Все</string>
    <string name="sales">Акции</string>
    <string name="sumTxt">Сумма</string>
    <string name="deliveryTxt">Доставка</string>
    <string name="itogTxt">Итого</string>
    <string name="take_delivey">Оформить заказ</string>
    <string name="more_info">Подробнее</string>
    <string name="add_to_cart">В корзину</string>
    <string name="favorite">Избранное</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="autorization">Регистрация</string>
    <string name="your_name">Ваше имя</string>
    <string name="authorization">Зарегистрироваться</string>
    <string name="have_acc">Есть аккаунт?</string>
    <string name="success">Даю согласие на обработку \nперсональных данных</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="forgot_passsword_description">Введите свою учетную запись для сброса</string>
    <string name="send">Отправить</string>
    <string name="otp">OTP проверка</string>
    <string name="otp_description">Пожалуйста, проверьте свою электронную почту, чтобы увидеть код подтверждения</string>
    <string name="otp_code">OTP Код</string>
    <string name="send_again">Отправить заново</string>
    <string name="_00_30">00:30</string>
    <string name="write_phrase">Введите фразу</string>
    <string name="genrate">Genrate</string>
    <string name="checkout">Подтвердить</string>
    <string name="change_email">Изменить почту</string>
    <string name="phone_number">Телефон</string>
    <string name="adress">Адрес</string>
    <string name="profile">Профиль</string>
    <string name="surname">Фамилия</string>
    <string name="phone">+7 811-732-5298</string>
    <string name="address">address</string>
    <string name="open">Открыть</string>
    <string name="success_transaction">Вы успешно оформили заказ</string>
    <string name="success_text">Вернуться к покупкам</string>
    <string name="notifications">Уведомления</string>
    <string name="orders">Заказы</string>
</resources>