<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/backBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:backgroundTint="@color/background"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_back" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/helloContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/main_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autorization" />

                <TextView
                    style="@style/description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/baseContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/helloContainer">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/edit_text_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_name" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="xyz@gmail.com"
                        android:paddingLeft="14dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:textColor="@color/text"
                        android:textColorHint="@color/hint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/edit_text_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="xyz@gmail.com"
                        android:paddingLeft="14dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:textColor="@color/text"
                        android:textColorHint="@color/hint" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/edit_text_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        app:boxStrokeWidth="0dp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/edit_text_background"
                            android:hint="••••••••"
                            android:inputType="textPassword"
                            android:paddingLeft="14dp"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp"
                            android:textColor="@color/text"
                            android:textColorHint="@color/hint" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/recoverBt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/successBt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:backgroundTint="@color/background"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:src="@drawable/ic_success" />
                    </com.google.android.material.card.MaterialCardView>


                    <TextView
                        style="@style/edit_text_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:lineHeight="16.38px"
                        android:text="@string/success"
                        android:textColor="@color/hint"
                        android:textSize="16sp" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginBt"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:outlineProvider="none"
                    android:text="@string/authorization" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/createUserBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/baseContainer">

                <TextView
                    style="@style/description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineHeight="16.38dp"
                    android:text="@string/have_acc"
                    android:textColor="@color/hint"
                    android:textSize="16sp" />

                <TextView
                    style="@style/description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:lineHeight="16.38dp"
                    android:text="@string/login"
                    android:textColor="@color/text"
                    android:textSize="16sp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>